navbar loading,notfound done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bg: #0c7e5c;
+  --bg-hover: #005A44;
+  --bg-delete:#E80212;
 }
 
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -15,13 +16,13 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+*/
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--bg));
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      rgb(var(--bg-hover))
     )
-    rgb(var(--background-start-rgb));
-} */
+    rgb(var(--bg-delete));
+} 
