--- a/src/Components/HomePage/review/review.css
+++ b/src/Components/HomePage/review/review.css
@@ -1,7 +1,7 @@
 /* Container style */
 .review-container {
     position: relative;
-    height: 80vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex: 1;
